feat: add trips rest api
