# internal/api/router/router.go
@@ -189,7 +189,8 @@ func Init(s *api.Server) {
 		})),
 
 		// Your other endpoints, typically secured by bearer auth, available at /api/v1/**
-		APIV1Push: s.Echo.Group("/api/v1/push", middleware.Auth(s)),
+		APIV1Push:  s.Echo.Group("/api/v1/push", middleware.Auth(s)),
+		APIV1Trips: s.Echo.Group("/api/v1/trips", middleware.Auth(s)),
 	}
 
 	// ---
