# internal/types/trip.go
@@ -1,0 +1,122 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package types
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// Trip trip
+//
+// swagger:model trip
+type Trip struct {
+
+	// end date
+	// Required: true
+	EndDate *string `json:"endDate"`
+
+	// id
+	// Required: true
+	ID *string `json:"id"`
+
+	// name
+	// Required: true
+	Name *string `json:"name"`
+
+	// start date
+	// Required: true
+	StartDate *string `json:"startDate"`
+}
+
+// Validate validates this trip
+func (m *Trip) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateEndDate(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateID(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateName(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateStartDate(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *Trip) validateEndDate(formats strfmt.Registry) error {
+
+	if err := validate.Required("endDate", "body", m.EndDate); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *Trip) validateID(formats strfmt.Registry) error {
+
+	if err := validate.Required("id", "body", m.ID); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *Trip) validateName(formats strfmt.Registry) error {
+
+	if err := validate.Required("name", "body", m.Name); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *Trip) validateStartDate(formats strfmt.Registry) error {
+
+	if err := validate.Required("startDate", "body", m.StartDate); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// ContextValidate validates this trip based on context it is used
+func (m *Trip) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *Trip) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *Trip) UnmarshalBinary(b []byte) error {
+	var res Trip
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
