# internal/types/trips/get_random_trip_route_parameters.go
@@ -1,0 +1,55 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package trips
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/runtime/middleware"
+	"github.com/go-openapi/strfmt"
+)
+
+// NewGetRandomTripRouteParams creates a new GetRandomTripRouteParams object
+// no default values defined in spec.
+func NewGetRandomTripRouteParams() GetRandomTripRouteParams {
+
+	return GetRandomTripRouteParams{}
+}
+
+// GetRandomTripRouteParams contains all the bound params for the get random trip route operation
+// typically these are obtained from a http.Request
+//
+// swagger:parameters GetRandomTripRoute
+type GetRandomTripRouteParams struct {
+
+	// HTTP Request Object
+	HTTPRequest *http.Request `json:"-"`
+}
+
+// BindRequest both binds and validates a request, it assumes that complex things implement a Validatable(strfmt.Registry) error interface
+// for simple values it will use straight method calls.
+//
+// To ensure default values, the struct must have been initialized with NewGetRandomTripRouteParams() beforehand.
+func (o *GetRandomTripRouteParams) BindRequest(r *http.Request, route *middleware.MatchedRoute) error {
+	var res []error
+
+	o.HTTPRequest = r
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (o *GetRandomTripRouteParams) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
